# mpich

./: .gitlab-ci.yml  .gitmodules  .travis.yml  Makefile.am  autogen.sh  azure-pipelines.yml  configure.ac
.github/: CODEOWNERS
.github/workflows/: ccpp.yml
confdb/: aclocal_cc.m4
doc/mansrc/: mpiconsts.txt
maint/fcrosscompile/: configure.ac
src/env/: mpicc.sh.in  mpicxx.sh.in  mpif77.sh.in  mpifort.sh.in
src/include/: mpir_comm.h  mpir_gpu.h  mpir_handlemem.h  mpir_objects.h  mpir_request.h  mpir_thread.h  mpir_typerep.h  mpit.h  netloc_util.h
src/mpi/coll/: helper_fns.c
src/mpi/coll/allreduce/: allreduce_intra_recursive_multiplying.c
src/mpi/coll/alltoallv/: alltoallv_intra_pairwise_sendrecv_replace.c
src/mpi/coll/ibarrier/: ibarrier_tsp_auto.c
src/mpi/coll/ibcast/: ibcast_tsp_auto.c
src/mpi/coll/include/: coll_types.h
src/mpi/coll/ineighbor_allgather/: ineighbor_allgather_allcomm_linear.c
src/mpi/coll/ireduce/: ireduce.c
src/mpi/comm/: Makefile.mk  comm_split_filesystem.c  commutil.c  contextid.c
src/mpi/debugger/: dbgstub.c  dll_mpich.c
src/mpi/errhan/: errutil.c
src/mpi/init/: abort.c  async.c  finalize.c  init.c  initthread.c  netloc_util.c
src/mpi/misc/: library_version.c  memory_alloc_kinds.c
src/mpi/pt2pt/: issend.c  mpir_request.c  test.c  waitall.c
src/mpi/request/: mpir_request.c
src/mpi/rma/: put.c  win_flush_all.c
src/mpi/romio/: configure.ac
src/mpi/romio/mpi-io/: Makefile.mk  mpir_cst_filesys.c
src/mpi/stream/: stream_enqueue.c
src/mpi/topo/: cart_create.c
src/mpi_t/: Makefile.mk  pvar_trace.c
src/mpid/ch3/src/: ch3u_comm.c  ch3u_eager.c  ch3u_handle_recv_req.c  ch3u_recvq.c  mpid_abort.c  mpid_getpname.c  mpid_irsend.c  mpid_isend.c  mpid_issend.c  mpid_rsend.c  mpid_send.c  mpid_ssend.c  mpidi_pg.c  mpidi_printf.c
src/mpid/ch4/: ch4_api.txt
src/mpid/ch4/generic/: Makefile.mk
src/mpid/ch4/include/: mpid_thread.h  mpidch4.h  mpidch4r.h  mpidpre.h
src/mpid/ch4/src/: Makefile.mk  ch4_coll.h  ch4_coll_globals_default.c  ch4_comm.c  ch4_comm.h  ch4_globals.c  ch4_impl.h  ch4_init.c  ch4_init.h  ch4_part.c  ch4_part.h  ch4_persist.c  ch4_progress.h  ch4_recv.h  ch4_rma.h  ch4_send.h  ch4_spawn.h  ch4_startall.h  ch4_types.h  ch4_win.h  ch4i_comm.h  ch4i_workq.h  ch4i_workq_types.h  ch4r_callbacks.c  (+7 more)
src/mpl/: configure.ac
src/mpl/include/: mpl_dbg.h  mpl_gpu.h  mpl_shm.h  mpl_shm_win.h  mpl_str.h  mpl_thread_posix.h
src/nameserv/file/: file_nameserv.c
src/nameserv/pmi/: pmi_nameserv.c
src/pm/gforker/: mpiexec.c
src/pm/util/: cmnargs.c  labelout.c  pmiport.c  pmiserv.c  process.c  rm.c  simple_pmiutil2.c
src/pmi/: Makefile.mk
src/pmi/include/: pmix_macros.h  pmix_types.h
src/pmi/pmi2/: subconfigure.m4
src/pmi/simple/: Makefile.am  configure.ac  simple_pmi.c  simple_pmiutil.c  subconfigure.m4
src/pmi/slurm/: Makefile.mk  pmi.h  pmi2.h  subconfigure.m4
src/pmi/src/: pmi_util.c  pmi_v1.c  pmi_wire.c  pmix.c
src/util/: Makefile.mk  mpir_nodemap.h  mpir_pmi.c
src/util/nodemap/: build_nodemap.h
test/mpi/: .gitignore  configure.ac  runtests.in
test/mpi/coll/: p_order.c
test/mpi/include/: mtest_common.h
test/mpi/io/: large_count.c
test/mpi/maint/: gentests_dtp.sh
test/mpi/pt2pt/: testlist.in
test/mpi/rma/: accfence1.c  accpscw1.c  epochtest.c  fence.c  lock_x_dt.c  putpscw1.c
test/mpi/util/: mtest_common.c
(+171 files in other folders)
