# -*- Mode: Makefile; -*-
#
# (C) 2008 by Argonne National Laboratory.
#     See COPYRIGHT in top-level directory.
#

ACLOCAL_AMFLAGS = -I confdb
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_builddir)/include

libpmi_la_SOURCES = simple_pmiutil.c simple_pmi.c

noinst_HEADERS = simple_pmiutil.h
noinst_LTLIBRARIES = libpmi.la
